Update 1-8. 프로그래밍 코드 최적화(02.10).md

--- a/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
+++ b/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
@@ -439,20 +439,473 @@ parse() : 필요
     INSERT lv_nav INTO TABLE et_expanded_tech_clauses.
   endmethod.
 ```
-- 
+- `/IWBEP/IF_MGW_APPL_SRV_RUNTIME~GET_EXPANDED_ENTITYSET`
 ```abap
-" ZCL_ZGWHEADITEM_B03_DPC_EXT
+" ZCL_ZGWHEADITEM_B03_DPC_EXT : /IWBEP/IF_MGW_APPL_SRV_RUNTIME~GET_EXPANDED_ENTITYSET
 
+  method /IWBEP/IF_MGW_APPL_SRV_RUNTIME~GET_EXPANDED_ENTITYSET.
+    TYPES BEGIN OF ts_headeritem.
+      INCLUDE TYPE ZCL_ZGWHEADITEM_B03_MPC=>ts_header.
+      TYPES ItemSet TYPE TABLE OF ZCL_ZGWHEADITEM_B03_MPC=>ts_item WITH DEFAULT KEY.
+    TYPES END OF ts_headeritem.
+
+    TYPES tt_headeritem TYPE STANDARD TABLE OF
+      ts_headeritem WITH DEFAULT KEY.
+
+    DATA: lt_header_item_set TYPE tt_headeritem,
+          lt_header_db TYPE TABLE OF ZSCARRCL2_B03,
+          lt_item_db TYPE TABLE OF ZSPFLICL2_B03,
+          lv_nav TYPE string VALUE 'ITEMSET'.
+    FIELD-SYMBOLS <fs> TYPE ts_headeritem.
+
+    " 1. Header 조회하고, Headeritem 구조체에 헤더 적용
+    SELECT * FROM zscarrcl2_b03
+      INTO TABLE lt_header_db.
+    IF sy-subrc = 0.
+      MOVE-CORRESPONDING lt_header_db TO lt_header_item_set.
+
+      " 2-1. Header에 맞는 Item 조회
+      SELECT * FROM zspflicl2_b03
+        FOR ALL ENTRIES IN @lt_header_db
+        WHERE carrid = @lt_header_db-carrid
+        INTO TABLE @lt_item_db.
+
+      " 2-2. Item 루프 돌면서, HeaderItem 구조체의 ItemSet테이블에 적용
+      LOOP AT lt_item_db ASSIGNING FIELD-SYMBOL(<fs_item>).
+        UNASSIGN <fs>.
+        ASSIGN lt_header_item_set[ carrid = <fs_item>-carrid ] TO <fs>.
+        APPEND <fs_item> TO <fs>-itemset.
+      ENDLOOP.
+
+      " 3. 결과 출력 (ER_ENTITYSET)
+      copy_data_to_ref(
+        EXPORTING is_data = lt_header_item_set
+        CHANGING cr_data = er_entityset
+      ).
+      INSERT lv_nav INTO TABLE et_expanded_tech_clauses.
+    ENDIF.
+  endmethod.
 ```
-- 
+- `/IWBEP/IF_MGW_APPL_SRV_RUNTIME~CREATE_DEEP_ENTITY`
 ```abap
-" ZCL_ZGWHEADITEM_B03_DPC_EXT
+" ZCL_ZGWHEADITEM_B03_DPC_EXT : /IWBEP/IF_MGW_APPL_SRV_RUNTIME~CREATE_DEEP_ENTITY
 
+  method /IWBEP/IF_MGW_APPL_SRV_RUNTIME~CREATE_DEEP_ENTITY.
+    TYPES BEGIN OF ts_headeritem.
+      INCLUDE TYPE ZCL_ZGWHEADITEM_B03_MPC=>ts_header.
+      TYPES ItemSet TYPE TABLE OF ZCL_ZGWHEADITEM_B03_MPC=>ts_item WITH DEFAULT KEY.
+    TYPES END OF ts_headeritem.
+
+    DATA: ls_create_data TYPE ts_headeritem,
+          ls_header TYPE ZCL_ZGWHEADITEM_B03_mpc=>ts_header,
+          lt_item TYPE ZCL_ZGWHEADITEM_B03_mpc=>tt_item.
+    CASE iv_entity_name.
+      WHEN 'Header'.
+        io_data_provider->read_entry_data(
+          IMPORTING es_data = ls_create_data
+        ).
+
+        " 받아온 Header-Item 데이터 분리
+        MOVE-CORRESPONDING ls_create_data TO ls_header.
+        MOVE-CORRESPONDING ls_create_data-itemset TO lt_item.
+
+        " 각 DB Table에 Create
+        INSERT zscarrcl2_b03 FROM ls_header.
+        IF sy-subrc = 0.
+          INSERT zspflicl2_b03 FROM TABLE lt_item.
+          IF sy-subrc <> 0.
+            ROLLBACK WORK.  " item insert 실패 시 전체 롤백
+          ENDIF.
+        ENDIF.
+
+        " 결과 출력 (ER_DEEP_ENTITY)
+        copy_data_to_ref(
+          EXPORTING is_data = ls_create_data
+          CHANGING cr_data = er_deep_entity
+        ).
+    ENDCASE.
+  endmethod.
 ```
 </br>
-
-**1) SAP GUI 코드**
-
 </br>
 
-**1) SAP GUI 코드**
+**2) Main.controller.js**
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/Filter",
+    "sap/ui/model/FilterOperator",
+     "sap/ui/model/json/JSONModel",
+     "sap/ui/core/Fragment"
+], (Controller, Filter, FilterOperator, JSONModel, Fragment) => {
+    "use strict";
+
+    return Controller.extend("assignment1.controller.Main", {
+        onInit() {
+            this.oHeaderModel = this.getOwnerComponent().getModel("ZGWHEADITEM_B03_SRV");  
+            this.oHeaderModel.read("/HeaderSet", {
+                urlParameters: { "$expand": "ItemSet" },
+                success: function(oReturn) {
+                    sap.m.MessageToast.show("Header 전체 조회 성공!");
+                    console.log(oReturn.results);
+                    debugger;
+                }.bind(this),
+                error: function() { 
+                    sap.m.MessageToast.show("Header 전체 조회 에러!");
+                }
+            })
+
+            this.oInputModel = new JSONModel();
+            this.oMainModel = new JSONModel();     
+            this.getView().setModel(this.oInputModel, "oInputModel");   
+            this.getView().setModel(this.oMainModel, "oMainModel");   
+            this.oDataModel = this.getOwnerComponent().getModel();  
+            this.oDataModel.read("/EmployeeSet", {
+                success: function(oReturn) {
+                    this.oMainModel.setData(oReturn.results);
+                }.bind(this),
+            })
+        },
+        onSearch: function() {
+            let oInput = this.oInputModel.getData();    // 입력값 (필터)
+            let oFilter = [];
+            let oDateFormat = sap.ui.core.format.DateFormat.getInstance({
+                pattern: "yyyy-MM-dd",
+                UTC: true
+            });
+            let oStartDate = oDateFormat.parse(oInput.Assigndate);
+            let oEndDate = oDateFormat.parse("20260701");
+
+            if (oStartDate) {
+                oFilter.push(
+                    new Filter("Assigndate", FilterOperator.BT, oStartDate, oEndDate)
+                );
+            }
+            if(oInput.Memo) {
+                oFilter.push(new Filter("Memo", FilterOperator.EQ, oInput.Memo));
+            }
+            this.oDataModel.read("/EmployeeSet", {
+                filters: oFilter,
+                success: function(oReturn) {
+                    this.oMainModel.setData(oReturn.results);
+                    debugger;
+                    sap.m.MessageToast.show("필터 성공!");
+                }.bind(this),
+                error: function() { 
+                    sap.m.MessageToast.show("필터 에러!");
+                }
+            })
+            // this.byId("idEmployeeTable").getBinding("items").filter(oFilter);
+        },
+        onCreate: function() {
+            let oModel = new JSONModel();     
+            let oDialog = sap.ui.getCore().byId("idCreateDialog");    
+
+            if(oDialog) {      
+                oDialog.open();
+            }
+            else {
+                Fragment.load({
+                    name: "assignment1.view.fragment.CreateDialog",        
+                    type: "XML",        
+                    controller: this    
+                }).then(function(oDialog) {
+                    oDialog.setModel(oModel, "oCreateModel");
+                    oDialog.open();
+                }.bind(this))
+            }
+        },
+        onCreateButton: function() {
+            let oData = sap.ui.getCore().byId("idCreateDialog").getModel("oCreateModel").getData();
+            if (oData.Assigndate) {
+                oData.Assigndate.setMinutes(
+                    oData.Assigndate.getMinutes() - oData.Assigndate.getTimezoneOffset()
+                );
+            }
+            let oBody = {
+                Empno   : oData.Empno,
+                Projod  : oData.Projod,
+                Assigndate  : oData.Assigndate,
+                Role    : oData.Role,
+                Memo    : oData.Memo
+            }
+            this.oDataModel.create("/EmployeeSet", oBody, {
+                success: function() {
+                    sap.m.MessageToast.show("생성 성공!");
+                },
+                error: function() {
+                    sap.m.MessageToast.show("생성 에러!");
+                }
+            })
+            this.oDataModel.read("/EmployeeSet", {
+                success: function(oReturn) {
+                    this.oMainModel.setData(oReturn.results);
+                }.bind(this)
+            })
+        },
+        onClose2: function(oEvent) {
+            oEvent.getSource().getParent().close();
+        },
+        onUpdate: function() {
+            let oData = this.byId("idEmployeeTable").getSelectedItem().getBindingContext("oMainModel").getObject();    // 선택한 열의 데이터 가져오기
+            let oModel = new JSONModel(oData);      // 선택한 열의 데이터로 모델 생성 -> 다이얼로그에서 쓰기 위함
+            let oDialog = sap.ui.getCore().byId("idUpdateDialog");    
+
+            if(oDialog) {      
+                oDialog.open();
+            }
+            else {
+                Fragment.load({
+                    name: "assignment1.view.fragment.UpdateDialog",        
+                    type: "XML",        
+                    controller: this    
+                }).then(function(oDialog) {
+                    oDialog.setModel(oModel, "oUpdateModel");
+                    oDialog.open();
+                }.bind(this))
+            }
+        },
+        onUpdateButton: function() {
+            let oModel = sap.ui.getCore().byId("idUpdateDialog").getModel("oUpdateModel");    // 다이얼로그에서 수정한 데이터 값
+            let oData = oModel.getData();
+
+            oData.Assigndate.setMinutes(
+                oData.Assigndate.getMinutes() - oData.Assigndate.getTimezoneOffset()
+            );
+
+            let sPath = this.oDataModel.createKey("/EmployeeSet", {
+                Empno : oData.Empno,
+                Projod : oData.Projod
+            })
+            this.oDataModel.update(sPath, oData, {
+                success: function() {
+                    sap.m.MessageToast.show("수정 성공!");
+                    this.oDataModel.read("/EmployeeSet", {
+                        success: function(oReturn) {
+                            this.oMainModel.setData(oReturn.results);
+                        }.bind(this)
+                    })
+                }.bind(this),
+                error: function() {
+                    sap.m.MessageToast.show("수정 에러!");
+                }
+            })
+            this.oDataModel.read("/EmployeeSet", {
+                success: function(oReturn) {
+                    this.oMainModel.setData(oReturn.results);
+                }.bind(this)
+            })
+        },
+        onClose: function(oEvent) {
+            oEvent.getSource().getParent().close();
+        },
+        onDelete: function() {
+            let oData = this.byId("idEmployeeTable").getSelectedItem().getBindingContext("oMainModel").getObject(); 
+            let sPath = this.oDataModel.createKey("/EmployeeSet", {
+                Empno: oData.Empno,
+                Projod : oData.Projod
+            });
+            this.oDataModel.remove(sPath, {
+                success: function () {
+                    sap.m.MessageToast.show("삭제 성공!");
+                    this.oDataModel.read("/EmployeeSet", {
+                        success: function(oReturn) {
+                            this.oMainModel.setData(oReturn.results);
+                        }.bind(this)
+                    })
+                }.bind(this)
+            });
+        }
+    });
+});
+```
+</br>
+</br>
+
+**3) Main.view.xml**
+```html
+<mvc:View controllerName="assignment1.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:f="sap.f"
+    xmlns:layout="sap.ui.layout"
+    xmlns:fb="sap.ui.comp.filterbar"
+    xmlns="sap.m">
+    <f:DynamicPage id="dynamicPageId" headerExpanded="true" toggleHeaderOnTitleClick="false">
+        <!-- DynamicPage Title -->
+        <f:title>
+            <f:DynamicPageTitle>
+                <f:heading>
+                    <Title text="Header Title"/>
+                </f:heading>
+                <!-- <f:content>
+                    <OverflowToolbar>
+                    </OverflowToolbar>
+                </f:content> -->
+            </f:DynamicPageTitle>
+        </f:title>
+        <!-- DynamicPage Header -->
+        <f:header>
+            <f:DynamicPageHeader pinnable="false">
+                <fb:FilterBar id="filterbar" search="onSearch" persistencyKey="myPersKey" useToolbar="false" showGoOnFB="true" showFilterConfiguration="false">
+                    <fb:filterGroupItems>
+                        <fb:FilterGroupItem name="Assigndate" groupName="Group1" label="Assign Date" visibleInFilterBar="true">
+                            <fb:control>
+                                <DatePicker value="{oInputModel>/Assigndate}"
+                                            valueFormat="yyyy-MM-dd"
+                                            displayFormat="yyyy-MM-dd" />
+                            </fb:control>
+                        </fb:FilterGroupItem>
+                        <fb:FilterGroupItem name="Memo" groupName="Group1" label="Memo" visibleInFilterBar="true">
+                            <fb:control>
+                                <Input value="{oInputModel>/Memo}"/>
+                            </fb:control>
+                        </fb:FilterGroupItem>
+                        <!-- <fb:FilterGroupItem name="Search" groupName="Group1" visibleInFilterBar="true">
+                            <fb:control>
+                                <Button text="검색버튼" press="onPress" />
+                            </fb:control>
+                        </fb:FilterGroupItem> -->
+                    </fb:filterGroupItems>
+                </fb:FilterBar>
+            </f:DynamicPageHeader>
+        </f:header>
+        <f:content>
+            <Table id="idEmployeeTable"
+                    sticky="HeaderToolbar,ColumnHeaders"
+                    inset="false"
+                    items="{oMainModel>/}"
+                    selectionChange="onSelectionChange"
+                    class="sapFDynamicPageAlignContent"
+                    mode="SingleSelectLeft"
+                    width="auto">
+                <headerToolbar>
+                    <Toolbar>
+                        <Title text="Products" level="H2"/>
+                        <Button text="생성" press="onCreate" type="Emphasized"/>
+                        <Button text="수정" press="onUpdate" type="Emphasized"/>
+                        <Button text="삭제" press="onDelete" type="Emphasized"/>
+                    </Toolbar>
+                </headerToolbar>
+                <columns>
+                    <Column width="12em">
+                        <Text text="Empno" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="Projod" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="Assigndate" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="Role" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="Memo" />
+                    </Column>
+                </columns>
+                <items>
+                    <ColumnListItem>
+                        <cells>
+                            <Text text="{oMainModel>Empno}" />
+                            <Text text="{oMainModel>Projod}" />
+                            <Text text="{
+                                path: 'oMainModel>Assigndate',
+                                type: 'sap.ui.model.type.DateTime',
+                                formatOptions: { pattern : 'yyyy-MM-dd' }
+                            }" />
+                            <Text text="{oMainModel>Role}" />
+                            <Text text="{oMainModel>Memo}" />
+                        </cells>
+                    </ColumnListItem>
+                </items>
+            </Table>
+        </f:content>
+    </f:DynamicPage>
+</mvc:View>
+```
+</br>
+</br>
+
+**4) CreateDialog.fragment.xml**
+```html
+<c:FragmentDefinition 
+    xmlns="sap.m" 
+    xmlns:f="sap.ui.layout.form"
+    xmlns:c="sap.ui.core">
+    <Dialog id="idCreateDialog"
+            title="Create Dialog"
+            contentHeight="50%"
+            contentWidth="20%">
+        <content>
+            <f:SimpleForm
+                layout="ColumnLayout"
+                columnsXL="1"
+                columnsL="1"
+                columnsM="1">
+                <f:content>
+                    <Label text="Empno"/>
+                    <Input value="{oCreateModel>/Empno}" />
+                    <Label text="Projod"/>
+                    <Input value="{oCreateModel>/Projod}" />
+                    <Label text="Assign date"/>
+                    <DatePicker
+                        dateValue="{oCreateModel>/Assigndate}"
+                        displayFormat="yyyy-MM-dd"
+                    />
+                    <Label text="Role"/>
+                    <Input value="{oCreateModel>/Role}" />
+                    <Label text="Memo"/>
+                    <Input value="{oCreateModel>/Memo}" />
+                </f:content>
+            </f:SimpleForm>
+        </content>
+        <buttons>
+            <Button text="생성" press=".onCreateButton" />
+            <Button text="닫기" press=".onClose2" />
+        </buttons>
+    </Dialog>
+</c:FragmentDefinition>
+```
+</br>
+</br>
+
+**5) UpdateDialog.fragment.xml**
+```html
+<c:FragmentDefinition 
+    xmlns="sap.m" 
+    xmlns:f="sap.ui.layout.form"
+    xmlns:c="sap.ui.core">
+    <Dialog id="idUpdateDialog"
+            title="Update Dialog"
+            contentHeight="50%"
+            contentWidth="20%">
+        <content>
+            <f:SimpleForm
+                layout="ColumnLayout"
+                columnsXL="1"
+                columnsL="1"
+                columnsM="1">
+                <f:content>
+                    <Label text="Empno"/>
+                    <Input value="{oUpdateModel>/Empno}" />
+                    <Label text="Projod"/>
+                    <Input value="{oUpdateModel>/Projod}" />
+                    <Label text="Assign date"/>
+                    <DatePicker
+                        dateValue="{oUpdateModel>/Assigndate}"
+                        displayFormat="yyyy-MM-dd"
+                    />
+                    <Label text="Role"/>
+                    <Input value="{oUpdateModel>/Role}" />
+                    <Label text="Memo"/>
+                    <Input value="{oUpdateModel>/Memo}" />
+                </f:content>
+            </f:SimpleForm>
+        </content>
+        <buttons>
+            <Button text="수정" press=".onUpdateButton" />
+            <Button text="닫기" press=".onClose" />
+        </buttons>
+    </Dialog>
+</c:FragmentDefinition>
+```
