Update 1-8. 프로그래밍 코드 최적화(02.10).md

--- a/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
+++ b/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
@@ -531,6 +531,8 @@ parse() : 필요
 
 **2) Main.controller.js**
 ```java
+// assignment1
+
 sap.ui.define([
     "sap/ui/core/mvc/Controller",
     "sap/ui/model/Filter",
@@ -724,6 +726,8 @@ sap.ui.define([
 
 **3) Main.view.xml**
 ```html
+// assignment1
+
 <mvc:View controllerName="assignment1.controller.Main"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns:f="sap.f"
@@ -828,6 +832,8 @@ sap.ui.define([
 
 **4) CreateDialog.fragment.xml**
 ```html
+// assignment1
+
 <c:FragmentDefinition 
     xmlns="sap.m" 
     xmlns:f="sap.ui.layout.form"
@@ -871,6 +877,8 @@ sap.ui.define([
 
 **5) UpdateDialog.fragment.xml**
 ```html
+// assignment1
+
 <c:FragmentDefinition 
     xmlns="sap.m" 
     xmlns:f="sap.ui.layout.form"
