Update 1-8. 프로그래밍 코드 최적화(02.10).md

--- a/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
+++ b/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
@@ -917,3 +917,12 @@ sap.ui.define([
     </Dialog>
 </c:FragmentDefinition>
 ```
+</br>
+</br>
+</br>
+</br>
+</br>
+
+### 실습 2
+- Header-Item Create 구현 실습
+<img width="425" height="265" alt="image" src="https://github.com/user-attachments/assets/69c3337a-1582-45a4-a178-cc74e1ccedb4" />
