Update 1-8. 프로그래밍 코드 최적화(02.10).md

--- a/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
+++ b/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
@@ -926,3 +926,444 @@ sap.ui.define([
 ### 실습 2
 - Header-Item Create 구현 실습
 <img width="425" height="265" alt="image" src="https://github.com/user-attachments/assets/69c3337a-1582-45a4-a178-cc74e1ccedb4" />
+
+<img width="549" height="305" alt="image" src="https://github.com/user-attachments/assets/baf59017-1d98-4a60-9ffc-11002129e7a2" />
+
+</br>
+</br>
+</br>
+
+**1) SAP GUI 코드**
+- `HEADERSET_GET_ENTITYSET`
+```abap
+" ZCL_ZGWHEADITEM_B03_DPC_EXT : HEADERSET_GET_ENTITYSET
+
+  method HEADERSET_GET_ENTITYSET.
+    SELECT * FROM zscarrcl2_b03
+      INTO TABLE et_entityset.
+  endmethod.
+```
+- `ITEMSET_GET_ENTITYSET`
+```abap
+" ZCL_ZGWHEADITEM_B03_DPC_EXT : ITEMSET_GET_ENTITYSET
+
+  method ITEMSET_GET_ENTITYSET.
+    DATA lv_carrid TYPE s_carr_id.
+    DATA lt_data TYPE TABLE OF zspflicl2_b03.
+
+    LOOP AT it_key_tab INTO DATA(ls_key).
+      IF ls_key-name EQ 'Carrid'.
+        MOVE ls_key-value TO lv_carrid.
+      ENDIF.
+    ENDLOOP.
+
+    SELECT * FROM ZSPFLICL2_B03
+      INTO TABLE lt_data
+      WHERE carrid = lv_carrid.
+    IF sy-subrc = 0.
+      MOVE-CORRESPONDING lt_data TO et_entityset.
+    ENDIF.
+  endmethod.
+```
+- `/IWBEP/IF_MGW_APPL_SRV_RUNTIME~GET_EXPANDED_ENTITY`
+```abap
+" ZCL_ZGWHEADITEM_B03_DPC_EXT : /IWBEP/IF_MGW_APPL_SRV_RUNTIME~GET_EXPANDED_ENTITY
+
+  method /IWBEP/IF_MGW_APPL_SRV_RUNTIME~GET_EXPANDED_ENTITY.
+    TYPES BEGIN OF ty_headeritem.
+      INCLUDE TYPE ZCL_ZGWHEADITEM_B03_MPC=>ts_header.
+      TYPES ItemSet TYPE TABLE OF ZCL_ZGWHEADITEM_B03_MPC=>ts_item WITH DEFAULT KEY.
+    TYPES END OF ty_headeritem.
+    DATA: lv_carrid TYPE s_carr_id,
+          ls_header_item TYPE ty_headeritem,
+          lv_nav TYPE string VALUE 'ITEMSET'.
+
+    LOOP AT it_key_tab INTO DATA(ls_key).
+      IF ls_key-name EQ 'Carrid'.
+        MOVE ls_key-value TO lv_carrid.
+      ENDIF.
+    ENDLOOP.
+
+    " Header 조회
+    SELECT SINGLE * FROM zscarrcl2_b03
+      INTO CORRESPONDING FIELDS OF ls_header_item
+      WHERE carrid = lv_carrid.
+    if sy-subrc = 0.
+      " Item 조회 (Navigation Property 이름에 맞춰 데이터 채움)
+      SELECT * FROM zspflicl2_b03
+        INTO CORRESPONDING FIELDS OF TABLE ls_header_item-itemset
+        WHERE carrid = lv_carrid.
+    ENDIF.
+
+    " 결과 출력(ER_ENTITY)
+    copy_data_to_ref(
+      EXPORTING is_data = ls_header_item
+      CHANGING cr_data = er_entity ).
+
+    " Navigation Property 데이터 처리 완료되었다고 알려주는 파라미터
+    INSERT lv_nav INTO TABLE et_expanded_tech_clauses.
+  endmethod.
+```
+- `/IWBEP/IF_MGW_APPL_SRV_RUNTIME~GET_EXPANDED_ENTITYSET`
+```abap
+" ZCL_ZGWHEADITEM_B03_DPC_EXT : /IWBEP/IF_MGW_APPL_SRV_RUNTIME~GET_EXPANDED_ENTITYSET
+
+  method /IWBEP/IF_MGW_APPL_SRV_RUNTIME~GET_EXPANDED_ENTITYSET.
+    TYPES BEGIN OF ts_headeritem.
+      INCLUDE TYPE ZCL_ZGWHEADITEM_B03_MPC=>ts_header.
+      TYPES ItemSet TYPE TABLE OF ZCL_ZGWHEADITEM_B03_MPC=>ts_item WITH DEFAULT KEY.
+    TYPES END OF ts_headeritem.
+
+    TYPES tt_headeritem TYPE STANDARD TABLE OF
+      ts_headeritem WITH DEFAULT KEY.
+
+    DATA: lt_header_item_set TYPE tt_headeritem,
+          lt_header_db TYPE TABLE OF ZSCARRCL2_B03,
+          lt_item_db TYPE TABLE OF ZSPFLICL2_B03,
+          lv_nav TYPE string VALUE 'ITEMSET'.
+    FIELD-SYMBOLS <fs> TYPE ts_headeritem.
+
+    " 1. Header 조회하고, Headeritem 구조체에 헤더 적용
+    SELECT * FROM zscarrcl2_b03
+      INTO TABLE lt_header_db.
+    IF sy-subrc = 0.
+      MOVE-CORRESPONDING lt_header_db TO lt_header_item_set.
+
+      " 2-1. Header에 맞는 Item 조회
+      SELECT * FROM zspflicl2_b03
+        FOR ALL ENTRIES IN @lt_header_db
+        WHERE carrid = @lt_header_db-carrid
+        INTO TABLE @lt_item_db.
+
+      " 2-2. Item 루프 돌면서, HeaderItem 구조체의 ItemSet테이블에 적용
+      LOOP AT lt_item_db ASSIGNING FIELD-SYMBOL(<fs_item>).
+        UNASSIGN <fs>.
+        ASSIGN lt_header_item_set[ carrid = <fs_item>-carrid ] TO <fs>.
+        APPEND <fs_item> TO <fs>-itemset.
+      ENDLOOP.
+
+      " 3. 결과 출력 (ER_ENTITYSET)
+      copy_data_to_ref(
+        EXPORTING is_data = lt_header_item_set
+        CHANGING cr_data = er_entityset
+      ).
+      INSERT lv_nav INTO TABLE et_expanded_tech_clauses.
+    ENDIF.
+  endmethod.
+```
+- `/IWBEP/IF_MGW_APPL_SRV_RUNTIME~CREATE_DEEP_ENTITY`
+```abap
+" ZCL_ZGWHEADITEM_B03_DPC_EXT : /IWBEP/IF_MGW_APPL_SRV_RUNTIME~CREATE_DEEP_ENTITY
+
+  method /IWBEP/IF_MGW_APPL_SRV_RUNTIME~CREATE_DEEP_ENTITY.
+    TYPES BEGIN OF ts_headeritem.
+      INCLUDE TYPE ZCL_ZGWHEADITEM_B03_MPC=>ts_header.
+      TYPES ItemSet TYPE TABLE OF ZCL_ZGWHEADITEM_B03_MPC=>ts_item WITH DEFAULT KEY.
+    TYPES END OF ts_headeritem.
+
+    DATA: ls_create_data TYPE ts_headeritem,
+          ls_header TYPE ZCL_ZGWHEADITEM_B03_mpc=>ts_header,
+          lt_item TYPE ZCL_ZGWHEADITEM_B03_mpc=>tt_item.
+    CASE iv_entity_name.
+      WHEN 'Header'.
+        io_data_provider->read_entry_data(
+          IMPORTING es_data = ls_create_data
+        ).
+
+        " 받아온 Header-Item 데이터 분리
+        MOVE-CORRESPONDING ls_create_data TO ls_header.
+        MOVE-CORRESPONDING ls_create_data-itemset TO lt_item.
+
+        " 각 DB Table에 Create
+        INSERT zscarrcl2_b03 FROM ls_header.
+        IF sy-subrc = 0.
+          INSERT zspflicl2_b03 FROM TABLE lt_item.
+          IF sy-subrc <> 0.
+            ROLLBACK WORK.  " item insert 실패 시 전체 롤백
+          ENDIF.
+        ENDIF.
+
+        " 결과 출력 (ER_DEEP_ENTITY)
+        copy_data_to_ref(
+          EXPORTING is_data = ls_create_data
+          CHANGING cr_data = er_deep_entity
+        ).
+    ENDCASE.
+  endmethod.
+```
+</br>
+</br>
+
+**2) Main.controller.js**
+```java
+// assignment2
+
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel",
+    "sap/ui/core/Fragment",
+    "sap/ui/model/Sorter"
+], (Controller, JSONModel, Fragment, Sorter) => {
+    "use strict";
+
+    return Controller.extend("assignment2.controller.Main", {
+        onInit() {
+            this.oHeaderModel = this.getOwnerComponent().getModel();  
+            // this.oHeaderModel.read("/HeaderSet", {
+            //     urlParameters: {
+            //         "$expand" : "ItemSet",
+            //     },
+            //     success: function() {
+            //         sap.m.MessageToast.show("Header 조회 성공!");
+            //     },
+            //     error: function() {
+            //         sap.m.MessageToast.show("Header 조회 실패!");
+            //     }
+            // })
+            this.oItemNodel = this.getOwnerComponent().getModel();  
+        },
+        onSelectionChange: function(oEvent) {
+            let sPath = oEvent.getParameters().listItem.getBindingContext().getPath();
+            this.byId("idItemTable").bindElement(sPath);
+        },
+        onCreate: function() {
+            let oData = {
+                Carrid : "",
+                Carrname : "",
+                Currcode : "",
+                ItemSet: [ {
+                    Carrid : "",
+                    Connid : "",
+                    Cityfrom : "",
+                    Airpfrom : "",
+                    Cityto : "",
+                    Airpto : ""
+                } ]
+            };
+            let oModel = new JSONModel(oData); 
+            let oDialog = sap.ui.getCore().byId("idCreateDialog");    
+
+            if(oDialog) {      
+                this._oDialog.open();
+            }
+            else {
+                Fragment.load({
+                    name: "assignment2.view.fragment.CreateDialog",        
+                    type: "XML",        
+                    controller: this    
+                }).then(function(oDialog) {
+                    this._oDialog = oDialog;
+                    this._oDialog.setModel(oModel, "oCreateModel");
+                    this._oDialog.open();
+                }.bind(this))
+            }
+        },
+        onAddLine: function() {
+            let oModel = this._oDialog.getModel("oCreateModel");
+            let oData = oModel.getProperty("/ItemSet");
+            oData.push({
+                Carrid : "",
+                Connid : "",
+                Cityfrom : "",
+                Airpfrom : "",
+                Cityto : "",
+                Airpto : ""
+            });
+            oModel.setProperty("/ItemSet", oData);
+        },
+        onCreateSave: function() {
+            let oData = this._oDialog.getModel("oCreateModel").getData();
+            let oItems = [];
+            for (let i=0; i<oData.ItemSet.length; i++) {
+                let oInputRow = oData.ItemSet[i]; 
+                oItems.push({
+                    Carrid   : oData.Carrid,      
+                    Connid   : oInputRow.Connid,
+                    Cityfrom : oInputRow.Cityfrom,
+                    Airpfrom : oInputRow.Airpfrom,
+                    Cityto   : oInputRow.Cityto,
+                    Airpto   : oInputRow.Airpto
+                });
+            }
+            let oBody = {
+                Carrid : oData.Carrid,
+                Carrname : oData.Carrname,
+                Currcode : oData.Currcode,
+                ItemSet: oItems
+            };
+            this.oHeaderModel.create("/HeaderSet", oBody, {
+                success: function() {
+                    sap.m.MessageToast.show("생성 성공!");
+                    this._oDialog.close();
+                }.bind(this),
+                error: function() {
+                    sap.m.MessageToast.show("생성 실패!");
+                }
+            });
+        },
+        onCreateClose: function(oEvent) {
+            oEvent.getSource().getParent().close();
+        }
+    });
+});
+```
+</br>
+</br>
+
+**3) Main.view.xml**
+```html
+// assignment2
+
+<mvc:View controllerName="assignment2.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+        <Table id="idHeaderTable"
+                sticky="HeaderToolbar,ColumnHeaders"
+                inset="false"
+                items="{/HeaderSet}"
+                selectionChange="onSelectionChange"
+                class="sapFDynamicPageAlignContent"
+                mode="SingleSelectLeft"
+                width="auto"
+                updateFinished="onHeaderUpdateFinished">
+            <headerToolbar>
+                <Toolbar>
+                    <Title text="Header Table" level="H2" />
+                    <Button text="생성" press="onCreate" />
+                    <Button text="수정" press="onUpdate" />
+                    <Button text="삭제" press="onDelete" />
+                </Toolbar>
+            </headerToolbar>
+            <columns>
+                <Column width="12em">
+                    <Text text="Carrid" />
+                </Column>
+                <Column width="12em">
+                    <Text text="Carrname" />
+                </Column>
+                <Column width="12em">
+                    <Text text="Currcode" />
+                </Column>
+            </columns>
+            <items>
+                <ColumnListItem>
+                    <cells>
+                        <Text text="{Carrid}" />
+                        <Text text="{Carrname}" />
+                        <Text text="{Currcode}" />
+                    </cells>
+                </ColumnListItem>
+            </items>
+        </Table>
+        <Toolbar class="sapUiMediumMarginTop" visible="false"/>
+        <Table id="idItemTable"
+                visible="true"
+                sticky="HeaderToolbar,ColumnHeaders"
+                inset="false"
+                items="{ItemSet}"
+                class="sapFDynamicPageAlignContent"
+                width="auto">
+            <headerToolbar>
+                <Toolbar>
+                    <Title text="Item Table" level="H2" />
+                </Toolbar>
+            </headerToolbar>
+            <columns>
+                <Column width="12em">
+                    <Text text="Carrid" />
+                </Column>
+                <Column width="12em">
+                    <Text text="Connid" />
+                </Column>
+                <Column width="12em">
+                    <Text text="Cityfrom" />
+                </Column>
+                <Column width="12em">
+                    <Text text="Airpfrom" />
+                </Column>
+                <Column width="12em">
+                    <Text text="Cityto" />
+                </Column>
+                <Column width="12em">
+                    <Text text="Airpto" />
+                </Column>
+            </columns>
+            <items>
+                <ColumnListItem>
+                    <cells>
+                        <Text text="{Carrid}" />
+                        <Text text="{Connid}" />
+                        <Text text="{Cityfrom}" />
+                        <Text text="{Airpfrom}" />
+                        <Text text="{Cityto}" />
+                        <Text text="{Airpto}" />
+                    </cells>
+                </ColumnListItem>
+            </items>
+        </Table>
+    </Page>
+</mvc:View>
+```
+</br>
+</br>
+
+**4) CreateDialog.fragment.xml**
+```html
+" assignment2
+
+<core:FragmentDefinition
+    xmlns="sap.m"
+    xmlns:core="sap.ui.core"
+    xmlns:f="sap.ui.layout.form">
+    <Dialog id="idCreateDialog" title="데이터 생성" contentWidth="600px">
+        <content>
+            <f:SimpleForm editable="true">
+                <f:content>
+                    <core:Title text="Header Create" />
+                    <Label text="Carrid" />
+                    <Input value="{oCreateModel>/Carrid}" maxLength="3"/>
+                    <Label text="Carrname" />
+                    <Input value="{oCreateModel>/Carrname}" />
+                    <Label text="Currcode" />
+                    <Input value="{oCreateModel>/Currcode}" />
+                </f:content>
+            </f:SimpleForm>
+
+            <Table items="{oCreateModel>/ItemSet}">
+                <headerToolbar>
+                    <OverflowToolbar>
+                        <Title text="Item Create" />
+                        <ToolbarSpacer />
+                        <Button icon="sap-icon://add" text="행 추가" press="onAddLine" />
+                    </OverflowToolbar>
+                </headerToolbar>
+                <columns>
+                    <Column><Text text="Connid" /></Column>
+                    <Column><Text text="Cityfrom" /></Column>
+                    <Column><Text text="Airpfrom" /></Column>
+                    <Column><Text text="Cityto" /></Column>
+                    <Column><Text text="Airpto" /></Column>
+                </columns>
+                <items>
+                    <ColumnListItem>
+                        <cells>
+                            <Input value="{oCreateModel>Connid}" />
+                            <Input value="{oCreateModel>Cityfrom}" />
+                            <Input value="{oCreateModel>Airpfrom}" />
+                            <Input value="{oCreateModel>Cityto}" />
+                            <Input value="{oCreateModel>Airpto}" />
+                        </cells>
+                    </ColumnListItem>
+                </items>
+            </Table>
+        </content>
+        <beginButton>
+            <Button text="생성" type="Emphasized" press="onCreateSave" />
+        </beginButton>
+        <endButton>
+            <Button text="닫기" press="onCreateClose" />
+        </endButton>
+    </Dialog>
+</core:FragmentDefinition>
+```
