Update 1-8. 프로그래밍 코드 최적화(02.10).md

--- a/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
+++ b/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
@@ -929,6 +929,9 @@ sap.ui.define([
 </br>
 
 <img width="549" height="305" alt="image" src="https://github.com/user-attachments/assets/baf59017-1d98-4a60-9ffc-11002129e7a2" />
+</br>
+
+<img width="556" height="356" alt="image" src="https://github.com/user-attachments/assets/9c72afb2-91c0-45b9-b4c3-4d7b4f20e7de" />
 
 </br>
 </br>
