Update 1-8. 프로그래밍 코드 최적화(02.10).md

--- a/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
+++ b/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
@@ -542,7 +542,7 @@ sap.ui.define([
 ], (Controller, Filter, FilterOperator, JSONModel, Fragment) => {
     "use strict";
 
-    return Controller.extend("assignment1.controller.Main", {
+    return Controller.extend("sap.btp.zuiprogb03.controller.Main", {
         onInit() {
             this.oHeaderModel = this.getOwnerComponent().getModel("ZGWHEADITEM_B03_SRV");  
             this.oHeaderModel.read("/HeaderSet", {
@@ -550,7 +550,6 @@ sap.ui.define([
                 success: function(oReturn) {
                     sap.m.MessageToast.show("Header 전체 조회 성공!");
                     console.log(oReturn.results);
-                    debugger;
                 }.bind(this),
                 error: function() { 
                     sap.m.MessageToast.show("Header 전체 조회 에러!");
@@ -572,12 +571,12 @@ sap.ui.define([
             let oInput = this.oInputModel.getData();    // 입력값 (필터)
             let oFilter = [];
             let oDateFormat = sap.ui.core.format.DateFormat.getInstance({
-                pattern: "yyyy-MM-dd",
+                pattern: "yyyyMMdd",
                 UTC: true
             });
             let oStartDate = oDateFormat.parse(oInput.Assigndate);
             let oEndDate = oDateFormat.parse("20260701");
-
+            debugger;
             if (oStartDate) {
                 oFilter.push(
                     new Filter("Assigndate", FilterOperator.BT, oStartDate, oEndDate)
@@ -608,7 +607,7 @@ sap.ui.define([
             }
             else {
                 Fragment.load({
-                    name: "assignment1.view.fragment.CreateDialog",        
+                    name: "sap.btp.zuiprogb03.view.fragment.CreateDialog",        
                     type: "XML",        
                     controller: this    
                 }).then(function(oDialog) {
@@ -654,11 +653,12 @@ sap.ui.define([
             let oDialog = sap.ui.getCore().byId("idUpdateDialog");    
 
             if(oDialog) {      
+                sap.ui.getCore().byId("idUpdateDialog").getModel("oUpdateModel").setData(oData);
                 oDialog.open();
             }
             else {
                 Fragment.load({
-                    name: "assignment1.view.fragment.UpdateDialog",        
+                    name: "sap.btp.zuiprogb03.view.fragment.UpdateDialog",        
                     type: "XML",        
                     controller: this    
                 }).then(function(oDialog) {
