--- a/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
+++ b/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
@@ -1,5 +1,6 @@
 ## <  핵심 개념 >
-- **1) 조회(GET)는 HTTP 가능, 데이터 변경(Create/Update/Delete)은 HTTPS 필수**
+- **1) Header–Item 구조 OData 서비스 구현**
+- **2) DatePicker / DateRangeSelection 정리**
 </br>
 </br>
 
