Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -1,1 +1,12 @@
+## <  핵심 개념 >
+- **1) Header–Item 구조 OData 서비스 구현**
+- **2) DatePicker / DateRangeSelection 정리**
+</br>
+</br>
 
+---
+
+</br>
+
+## < Header–Item 구조 OData 서비스 구현 >
+</br>
