Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -8,5 +8,9 @@
 
 </br>
 
-## < Header–Item 구조 OData 서비스 구현 >
+## < npm 기반 프론트엔드 배포 절차 정리 >
 </br>
+
+**1) `cd project path` 로 경로 이동**
+<img width="573" height="433" alt="image" src="https://github.com/user-attachments/assets/b6d052ac-f52e-4b6a-8c39-cd8c91af0e13" />
+
