Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -12,5 +12,12 @@
 </br>
 
 **1) `cd project path` 로 경로 이동**
-<img width="573" height="433" alt="image" src="https://github.com/user-attachments/assets/b6d052ac-f52e-4b6a-8c39-cd8c91af0e13" />
 
+<img width="573" height="433" alt="image" src="https://github.com/user-attachments/assets/b6d052ac-f52e-4b6a-8c39-cd8c91af0e13" />
+</br>
+</br>
+
+**2) npm 배포 명령어 실행 순서**
+- 최초 1회 실행
+
+  - npm run build
