Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -21,3 +21,9 @@
 - 최초 1회 실행
 
   - npm run build
+  - npm run deploy-config
+  - npm run deploy
+- 2번째 배포부터
+  
+  - npm run build
+  - npm run deploy
